# financial-analyst

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  README.md  README_zh.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  VERSIONING.md  docker-compose.yml  pyproject.toml  start.bat  start.sh  stop.bat  stop.sh
.data/workflows/: w36b1f6dcfec9.json  w70957c2e2877.json  w952ff3d373e2.json  wc63e065c6c7b.json  wfa24e1cf06c6.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pypi-release.yml  release.yml
config/: llm.yaml  loaders.yaml
config/swarm/: etf-deep-dive.yaml  intraday-review.yaml  mainline-radar.yaml  morning-brief.yaml  overseas-radar.yaml  stock-deep-dive.yaml
config/universes/: csi300_2024h2.txt  csi_fast.txt  sample30.txt
docs/: FEATURES_FOR_DESIGN.md  README.md  UI_INTEGRATION_GAP.md  alpha_zoo.md  architecture.md  ask.md  byom.md  cli_advanced.md  csi300_bench_2024h2.md  data_contract.md  data_ingest.md  dev_guide.md  dream_loop.md  extending.md  factor_library.md  intraday_review.md  journey.md  journey_zh.md  mainline_radar.md  mcp.md  memories.md  module_map.md  morning_brief.md  news_db.md  node_recipe.md  report_interfaces.md  sessions.md  workflow_api.md  workflow_buildout_plan.md  workflow_plan.md  xueqiu_setup.md
docs/api/: sse_endpoints.md
docs/architecture/: 14_agents.md  architecture_design_brief.md
docs/brand/: visual_brief.md
docs/merge/: p16_deleted_manifest.txt
docs/research/: 2026-05-23-direct-data-stability.md
docs/setup/: beginner_zh.md  data_offline.md  data_pipeline.md  deployment.md  hf_publish_guide.md  install.md  release_checklist.md  tauri_packaging.md  zero_to_report.md
docs/ui/: guanlan_user_guide.md
engine/financial_analyst/: __init__.py  cli.py  data_cli.py  init_cli.py  memory_ops.py  memory_paths.py  settings.py  tui.py  update_cli.py  workspace.py
examples/: custom_f10_collector.py  custom_loader_csv_only.py  custom_model_fm_cluster.py  custom_news_collector.py
guanlan_v2/: README.md  __init__.py  server.py
guanlan_v2/archive/: __init__.py  api.py
guanlan_v2/autonomy/: __init__.py  api.py  jobs.py  playbooks.py  review_officer.py  runtime.py  subagent.py
guanlan_v2/cards/: __init__.py  api.py  card.py  factor_dsl_kb.md  ingest.py  refine.py  store.py
guanlan_v2/console/: __init__.py  api.py  curator.py  store.py  tools.py
guanlan_v2/datafeed/: __init__.py  api.py  health.py  kuaixun.py  live_client.py  market_tape.py  sentiment.py
guanlan_v2/factorlib/: README.md  __init__.py  api.py  claim_audit.py  qlib_to_zoo.py  semantics.py  store.py
guanlan_v2/fundflow/: __init__.py  api.py  pulse.py  sources.py
guanlan_v2/glmcp/: README.md  __main__.py  example.mcp.json  http.py  server.py  tooltable.py
guanlan_v2/industry/: __init__.py  aggregate.py  api.py  corpus.py  framework.py  ingest.py  llmx.py  pool_candidates.py  store.py
guanlan_v2/macro/: __init__.py  api.py  astock.py  pulse.py  sources.py  themes.yaml  translate.py
guanlan_v2/market/: __init__.py  api.py
guanlan_v2/mcp/: README.md  __main__.py  example.mcp.json  http.py  server.py  tooltable.py
guanlan_v2/reports/: __init__.py  api.py  evidence.py
guanlan_v2/research/: __init__.py  api.py  loop.py  store.py
guanlan_v2/screen/: __init__.py  api.py  catalog.py  factor_ic.py  factor_vintage.py  llm.py  market_temp.py  model_registry.py  news.py  picks.py  rerank.py  rescore.py
guanlan_v2/seats/: __init__.py  api.py  basket_perf.py  calibration.py  fm_backfill.py  live_book.py  narrative.py  news_marks.py  price_action.py  tca.py  watcher.py
guanlan_v2/strategy/: _PROVENANCE.md  __init__.py  _provenance.json  decision.py  market_status.py  model_health.py  paths.py  perspectives.py  ranking.py  regen_provenance.py  sentiment.py
guanlan_v2/workflow/: __init__.py  api.py  attrib.py  executor.py  factor_neutralize.py  portfolio_opt.py  store.py  tvbeta.py  volmodel.py
memories/: README.md
memories/_shared/: etf_context.md  (+2 more)
opencli-plugin-ths-extra/: README.md  concept-board.js  fund-flow.js  iwencai.js  opencli-plugin.json  package-lock.json  package.json
packaging/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
packaging/src-tauri/src/: main.rs
packaging/src-tauri/ui/: README.md  START.md  app.jsx  index.html
scripts/: audit_experience_files.py  check_9999.ps1  compare_breadth.py  compare_mainline.py  compare_v4.py  demo_tsic.py  fincast_predict.py  gat_predict.py  gat_validate.py  industry_deep_backfill.py  init_memories.py  probe_direct_data.py  probe_pytdx_vs_tushare.py  publish_hf_dataset.py  register_check_9999.ps1  register_watchdog_9999.ps1  setup_fincast.md  smoke_calendar_guard.py  smoke_decide_recipe.py  smoke_decisions_store.py  smoke_test_serve.sh  start-quant.ps1  stress_test_pytdx.py  sync_bundled_config.py  sync_fincast.py  sync_memories_seed.py  verify_ta_indicators.py  watchdog_9999.ps1
tests/: conftest.py  test_agent_registry.py  test_alerts.py  test_alpha_forge_tool.py  test_artifact_store.py  test_ask_agent.py  test_ask_cli.py  test_ask_tools.py  test_attrib.py  test_autonomy_api.py  test_autonomy_runtime.py  test_autonomy_subagent.py  test_backtest_broker.py  test_backtest_cancel.py  test_backtest_candidate.py  test_backtest_decision.py  test_backtest_engine.py  test_backtest_intraday.py  test_backtest_llm_smoke.py  test_backtest_metrics.py  test_backtest_panel_ux_e2e.py  test_backtest_pit_reader.py  test_backtest_portfolio.py  test_backtest_rest.py  test_backtest_run_end_to_end_v2.py  test_backtest_run_req_v2.py  test_backtest_smoke.py  test_basket_perf.py  test_brief_data.py  test_buddy.py  test_buddy_animation.py  test_buddy_app.py  test_buddy_context_budget.py  test_buddy_cwd.py  test_buddy_improvements.py  test_buddy_modes.py  test_buddy_token_budget.py  test_buddy_v165_reproduce.py  test_bug_fixes_124.py  test_build_etf_universe.py  (+288 more)
ui/: README.md  index.html
(+752 files in other folders)
