[project]
name = "financial-analyst"
version = "1.3.1"
description = "A-share single-stock deep-dive multi-agent research workstation with three-tier trust isolation, FTS5 memory retrieval, dream loop introspection, and BYOM extensibility."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "jesson-hh", email = "xuyi1030@proton.me"},
]
maintainers = [
    {name = "jesson-hh", email = "xuyi1030@proton.me"},
]
keywords = [
    "a-share",
    "stock-research",
    "quantitative-finance",
    "multi-agent",
    "ai-agent",
    "llm",
    "claude",
    "qwen",
    "litellm",
    "fts5",
    "qlib",
    "tushare",
    "investment-research",
    "fintech",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
]
dependencies = [
    "litellm>=1.50",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.12",
    "rich>=13",
    "prompt-toolkit>=3.0",
    "pandas>=2",
    "numpy>=1.26",
    "pyarrow>=15",
    "lightgbm>=4",
    "tushare>=1.4",
    "pyyaml>=6",
    "anyio>=4",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/jesson-hh/financial-analyst"
Repository = "https://github.com/jesson-hh/financial-analyst"
Issues = "https://github.com/jesson-hh/financial-analyst/issues"
Changelog = "https://github.com/jesson-hh/financial-analyst/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jesson-hh/financial-analyst/tree/main/docs"

[project.scripts]
financial-analyst = "financial_analyst.cli:main"
financial-analyst-mcp = "financial_analyst.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_analyst"]

[tool.hatch.build.targets.sdist]
# Keep code, tests, docs, configs, examples, memories — exclude dev-meta only
exclude = [
    "CLAUDE.md",
    "AGENTS.md",
    "GEMINI.md",
    "RELEASE_NOTES_v*.md",
    ".env",
    ".env.local",
    "out/",
    ".pytest_cache/",
    ".ruff_cache/",
    "__pycache__/",
    "**/__pycache__/",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
