[project]
name = "financial-analyst"
version = "1.0.9"
description = "A-share single-stock deep-dive multi-agent research workstation with three-tier trust isolation, FTS5 memory retrieval, dream loop introspection, and BYOM extensibility."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "jesson-hh", email = "xuyi1030@proton.me"},
]
maintainers = [
    {name = "jesson-hh", email = "xuyi1030@proton.me"},
]
keywords = [
    "a-share",
    "stock-research",
    "quantitative-finance",
    "multi-agent",
    "ai-agent",
    "llm",
    "claude",
    "qwen",
    "litellm",
    "fts5",
    "qlib",
    "tushare",
    "investment-research",
    "fintech",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
]
dependencies = [
    "litellm>=1.50",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.12",
    "rich>=13",
    "prompt-toolkit>=3.0",
    "pandas>=2",
    "numpy>=1.26",
    "pyarrow>=15",
    "lightgbm>=4",
    "tushare>=1.4",
    "pytdx>=1.72",      # 主站直连日线/5min/F10 (替代 Tushare token 路径)
    "pyyaml>=6",
    "anyio>=4",
    "mcp>=1.0",
    "huggingface-hub>=0.20",   # fa init wizard 下数据包
    "httpx>=0.27",             # buddy + tencent_quote
    "requests>=2.31",          # collectors / tushare HTTP
    "fastapi>=0.110",          # buddy SSE backend (fa serve / fa start)
    "uvicorn>=0.29",           # ASGI server for buddy
    "hf-transfer>=0.1.6",      # multi-connection HF downloads (3-10x speedup for CN users on hf-mirror)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "build>=1.0",
    "twine>=5.0",
]
modelscope = [
    "modelscope>=1.21",        # CN-native alternative to HuggingFace
]

[project.urls]
Homepage = "https://github.com/jesson-hh/financial-analyst"
Repository = "https://github.com/jesson-hh/financial-analyst"
Issues = "https://github.com/jesson-hh/financial-analyst/issues"
Changelog = "https://github.com/jesson-hh/financial-analyst/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jesson-hh/financial-analyst/tree/main/docs"

[project.scripts]
financial-analyst = "financial_analyst.cli:main"
fa = "financial_analyst.cli:main"
financial-analyst-mcp = "financial_analyst.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_analyst"]
# Include bundled config files + any other non-Python resources so pip
# installs ship the defaults (config/llm.yaml etc.) inside the wheel.
include = [
    "src/financial_analyst/**/*.py",
    "src/financial_analyst/_resources/**/*",
    "src/financial_analyst/ui/**/*",   # bundled web UI (jsx/html/css) for `fa launch`
]

[tool.hatch.build.targets.sdist]
# Keep code, tests, docs, configs, examples, memories — exclude dev-meta only
exclude = [
    "CLAUDE.md",
    "AGENTS.md",
    "GEMINI.md",
    "RELEASE_NOTES_v*.md",
    ".env",
    ".env.local",
    "out/",
    ".pytest_cache/",
    ".ruff_cache/",
    "__pycache__/",
    "**/__pycache__/",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "no_opencli_mock: skip the autouse shutil.which mock in test_opencli_runner (used by tests that intentionally exercise the missing-PATH error path)",
]
