[package]
name = "financial-analyst-tauri"
version = "1.0.6"
description = "觀瀾 desktop UI for financial-analyst (Tauri shell)"
authors = ["jesson-hh <xuyi1030@proton.me>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# NOTE: [lib] target removed — desktop-only build uses src/main.rs as binary.
# Re-add with a real src/lib.rs when mobile (iOS staticlib / Android cdylib) is in scope.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# 默认 release 不需要 webview2 安装 (Windows 7+ 自带 Edge)
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
